--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <main>
         <div>
             <h1>HOMBROS, GEMELOS</h1>
-            <video src="/videos/y2mate.com - Elevaciones Laterales en Polea Baja_480p.mp4" controls width="480px" height="480px" >Vuelos laterales a un brazo c/ polea baja 4x15</video>
+            <h2>1 DIA</h2>
+            <p>Vuelos laterales a un brazo c/ polea baja 4x15</p>
+            <video src="/videos/y2mate.com - Elevaciones Laterales en Polea Baja_480p.mp4" controls width="480px" height="400px" ></video>
+            <p>Vuelos frontales 4x15</p>
+            <video src="/videos/X2Download.app-Vuelos frontales con mancuerna Rutinas082000-(480p).mp4" controls width="480px" height="400px"></video>
         </div>
 
     </main>
