--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -13,9 +13,9 @@
             <h1>HOMBROS, GEMELOS</h1>
             <h2>1 DIA</h2>
             <p>Vuelos laterales a un brazo c/ polea baja 4x15</p>
-            <video src="/videos/y2mate.com - Elevaciones Laterales en Polea Baja_480p.mp4" controls width="480px" height="400px" ></video>
+            <video src="videos/y2mate.com - Elevaciones Laterales en Polea Baja_480p.mp4" controls width="480px" height="400px" ></video>
             <p>Vuelos frontales 4x15</p>
-            <video src="/videos/X2Download.app-Vuelos frontales con mancuerna Rutinas082000-(480p).mp4" controls width="480px" height="400px"></video>
+            <video src="videos/X2Download.app-Vuelos frontales con mancuerna Rutinas082000-(480p).mp4" controls width="480px" height="400px"></video>
         </div>
 
     </main>
