--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
             <video src="videos/y2mate.com - Elevaciones Laterales en Polea Baja_480p.mp4" controls width="480px" height="400px" ></video>
             <p>Vuelos frontales 4x15</p>
             <video src="videos/X2Download.app-Vuelos frontales con mancuerna Rutinas082000-(480p).mp4" controls width="480px" height="400px"></video>
+            <p>Cruce posterior a un brazo c/ polea 4x15</p>
+            <video width="480px" height="400px" controls></video>
+            <p>Vuelos posteriores en máquina 4x15</p>
+            <video width="480px" height="400px" controls></video>
+            <p>Jalones a la frente 4x15</p>
+            <video width="480px" height="400px" controls></video>
+            
+
+        
         </div>
 
     </main>
